--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "pkginfo": "0.2.x",
     "passport": ">=0.1.1",
-    "openam": "0.0.1"
+    "openam": ">=0.0.1"
   },
   "devDependencies": {
     "vows": "0.6.x"
@@ -25,6 +25,7 @@
   "engines": { "node": ">= 0.4.0" },
   "licenses": [ {
     "type": "CDDL",
+    "url": "http://hub.opensolaris.org/bin/view/Main/opensolaris_license"
   } ],
   "keywords": ["passport", "openam", "auth", "authn", "authentication"]
 }
